# media-duplicate-eraser-rs

./: Cargo.toml  README.md  duplicates.json
.github/workflows/: README.md  release.yml
src/: cli.rs  error.rs  lib.rs  logger.rs  main.rs
src/commands/: clean.rs  erase.rs  mod.rs  scan.rs
src/services/: duplicate.rs  hasher.rs  mod.rs
tests/: integration_tests.rs
tests/commands/: clean.rs  erase.rs  mod.rs  scan.rs
tests/common/: mod.rs
tests/fixtures/text/: duplicate_a.txt  unique.txt
