[package]
name = "media-duplicate-eraser-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
default-run = "mde"

[[bin]]
name = "mde"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
sha2 = "0.10"
image_hasher = "2"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
