[package]
name = "media-duplicate-eraser-rs"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "CLI tool to find and remove duplicate media files using SHA-256 and perceptual hashing"
repository = "https://github.com/mvillegas/media-duplicate-eraser-rs"
keywords = ["duplicate", "media", "images", "cli", "deduplication"]
categories = ["command-line-utilities", "filesystem"]
default-run = "mde"
exclude = ["media/", "tests/", "assets/", ".github/"]

[[bin]]
name = "mde"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
sha2 = "0.10"
image_hasher = "2"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
ffmpeg-sidecar = "2"

[dev-dependencies]
tempfile = "3"
